<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="true" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" android:text="@string/tipfiller" android:singleLine="true"/>
<TextView android:layout_height="wrap_content" android:text="@string/app_name" android:id="@+id/textView2" android:textSize="30dip" android:textColor="@color/BuddyGreen" android:layout_width="fill_parent" android:singleLine="true" android:gravity="center"></TextView>
<TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/searchinstructions"></TextView>
<TableLayout android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
    <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <CheckBox android:id="@+id/checkBox1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anything" android:checked="true"></CheckBox>
        <CheckBox android:id="@+id/checkBox2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cardboard"></CheckBox>
    </TableRow>
    <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tableRow2">
        <CheckBox android:id="@+id/checkBox3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/plastic"></CheckBox>
        <CheckBox android:id="@+id/checkBox4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paper"></CheckBox>
    </TableRow>
    <TableRow android:layout_width="wrap_content" android:id="@+id/TableRow3" android:layout_height="wrap_content">
        <CheckBox android:id="@+id/CheckBox02" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/glass"></CheckBox>
        <CheckBox android:id="@+id/CheckBox01" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/aluminum"></CheckBox>
    </TableRow>
</TableLayout>
<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/editText1" android:text="@string/citysthint"></EditText>
<TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tableLayout2">
    <TableRow android:id="@+id/tableRow5" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <EditText android:layout_height="wrap_content" android:id="@+id/editText2" android:layout_width="150dip" android:text="@string/ziphint"></EditText>
        <Button android:id="@+id/button1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/search"></Button>
    </TableRow>
</TableLayout>
<ImageView android:src="@drawable/icon" android:id="@+id/imageView1" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_gravity="center"></ImageView>
</LinearLayout>
