<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <RelativeLayout android:layout_height="wrap_content" android:id="@+id/rlHeader" android:layout_width="fill_parent">
        <TextView android:text="@string/greentip" android:layout_width="wrap_content" android:textColor="@color/BuddyGreen" android:layout_height="wrap_content" android:id="@+id/tvTipHeader"></TextView>
        <TextView android:marqueeRepeatLimit="marquee_forever" android:text="@string/tipfiller" android:layout_width="wrap_content" android:textColor="@color/BuddyGreen" android:singleLine="true" android:layout_height="wrap_content" android:id="@+id/tvTips" android:ellipsize="marquee" android:layout_toRightOf="@+id/tvTipHeader" android:layout_alignBottom="@+id/tvTipHeader"></TextView>
        <ImageView android:layout_width="wrap_content" android:layout_alignLeft="@+id/tvTipHeader" android:src="@drawable/icon" android:layout_below="@+id/tvTipHeader" android:layout_height="wrap_content" android:id="@+id/ivIcon"></ImageView>
        <TextView android:text="@string/app_name" android:layout_width="wrap_content" android:textSize="30dip" android:textColor="@color/BuddyGreen" android:layout_height="fill_parent" android:id="@+id/tvAppName" android:gravity="center" android:layout_toRightOf="@+id/ivIcon" android:layout_alignTop="@+id/ivIcon" android:layout_alignBottom="@+id/ivIcon"></TextView>
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:id="@+id/scrollView1" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_height="fill_parent" android:orientation="vertical">
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:autoLink="all" android:id="@+id/tvResults" android:textSize="20sp" android:text="@string/blank"></TextView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
